Prevent Breakout URL Bar jumping

--- a/Translucent Simple/userChrome.css
+++ b/Translucent Simple/userChrome.css
@@ -22,7 +22,7 @@
   left: 50% !important;
   width: 50vw !important;
   transform: translateX(-50%) translateY(-50%);
-  min-height: 35vh !important;
+  min-height: 40vh !important;
   box-shadow: 0 22px 70px 4px rgba(0, 0, 0, 0.56) !important;
   border-radius: 1.5rem !important;
 }
